пример env файла

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,7 @@
-BOT_TOKEN=x-files
-RAPID_API_KEY=x-files
+BOT_TOKEN="Взять в ботфазер"
+RAPID_API_KEY="Взять на сайте рапидапи.ком"
+X_RAPIDAPI_HOST="Взять на сайте рапидапи.ком"
+URL_DEST="Взять на сайте рапидапи.ком"
+URL_PHOTO="Взять на сайте рапидапи.ком"
+URL_HOTEL="Взять на сайте рапидапи.ком"
+URL_DETAILS="Взять на сайте рапидапи.ком"
